syntax = "proto3";

package krane.v1;

option go_package = "github.com/unkeyed/unkey/go/gen/proto/krane/v1;kranev1";

service SentinelService {
  // CreateSentinel
  rpc CreateSentinel(CreateSentinelRequest) returns (CreateSentinelResponse);

  // GetSentinel
  rpc GetSentinel(GetSentinelRequest) returns (GetSentinelResponse);

  // DeleteSentinel
  rpc DeleteSentinel(DeleteSentinelRequest) returns (DeleteSentinelResponse);
}

message SentinelRequest {
  string namespace = 1;
  string workspace_id = 2;
  string gateway_id = 3;

  string image = 4;

  uint32 replicas = 5;
  uint32 cpu_millicores = 6;
  uint64 memory_size_mib = 7;
}

message CreateSentinelRequest {
  SentinelRequest gateway = 1;
}

message CreateSentinelResponse {
  SentinelStatus status = 1;
}

message UpdateSentinelRequest {
  SentinelRequest gateway = 1;
}
message UpdateSentinelResponse {
  repeated string pod_ids = 1;
}

message DeleteSentinelRequest {
  string namespace = 1;
  string gateway_id = 2;
}

message DeleteSentinelResponse {}

message GetSentinelRequest {
  string namespace = 1;
  string gateway_id = 2;
}

message GetSentinelResponse {
  string address = 1;
  repeated SentinelInstance instances = 2;
}

enum SentinelStatus {
  GATEWAY_STATUS_UNSPECIFIED = 0;
  GATEWAY_STATUS_PENDING = 1; // Sentinel request accepted, container/pod creation in progress
  GATEWAY_STATUS_RUNNING = 2; // Container/pod is running and healthy
  GATEWAY_STATUS_TERMINATING = 3; // Container/pod is being terminated
}

message SentinelInstance {
  string id = 1;
  SentinelStatus status = 2;
}
